--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,5 @@
+/* Globals */
+
 body {
   padding: 0px;
   margin: 0px;
@@ -30,6 +32,7 @@ footer {
   color: black;
   margin: 1%;
   font-size: 1.5em;
+  padding-top: 5%;
 }
 
 a {
@@ -39,402 +42,4 @@ a {
 #odd {
   background-color: #95a5a6;
   color: #ecf0f1;
-}
-
-/* Mobile View */
-@media screen and (min-width: 320px) {
-  #adminmarg {
-    padding-top: 5%;
-  }
-
-  .navbar {
-    margin-bottom: 0px;
-  }
-  #logo {
-    font-family: 'Philosopher', sans-serif;
-  }
-  #main-bg {
-    width: 100%;
-    height: 600px;
-    color: white;
-    font-family: 'Orbitron', sans-serif;
-  }
-  #bg-stuff {
-    color: white;
-    padding-top: 350px;
-    padding-left: 2%;
-    width: 70%;
-    float: left;
-  }
-  #courseImage {
-    width: 100%;
-    height: 150px;
-  }
-  #nav {
-    /*background-color: #172C40;*/
-    color: black;
-    width: 100%;
-  }
-  #nav a {
-    color: black;
-  }
-  #form-container {
-    width: 100%;
-  }
-  #splashContent {
-    width: 100%;
-    height: 100%;
-    background-color: #F5F5F5;
-    color: #2980b9;
-    margin: 0;
-    padding: 0;
-  }
-  #splashDiv {
-    padding-top: 15px;
-  }
-  #splashLogo {
-    font-family: 'Ultra', serif;
-    padding-left: 15px;
-    font-size: 1.5em;
-  }
-  #splashHomeButton {
-    font-size: 2em;
-    left: 80%;
-    top: 2%;
-    z-index: 900;
-    position: absolute;
-  }
-  #splashHomeButton a {
-    color: #c0392b;
-  }
-  #splashHomeButton a:hover {
-    color: #27ae60;
-  }
-  #splashHead {
-    font-family: 'Ubuntu', sans-serif;
-    text-align: center;
-  }
-  #splashImage {
-    width: 100%;
-  }
-  #learning-image {
-    width: 100%;
-  }
-  #projectImage {
-    width: 100%;
-    height: 100%;
-  }
-  #adminVideoContainer {
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-  }
-  #callOptions {
-    width: 100%;
-    height: 50px;
-    visibility: hidden;
-  }
-  #textEditor {
-    margin-top: -500px;
-    width: 100%;
-    height: 100%;
-  }
-  #startButton {
-    width: 100%;
-    height: 100%;
-    background-color: green;
-    color: white;
-  }
-  #recordButton {
-    width: 100%;
-    height: 100%;
-    background-color: red;
-    color: white;
-  }
-  .wrap {
-    position: relative;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    margin: auto;
-  }
-  .button {
-    background-color: transparent;
-    border: 2px solid #e74c3c;
-    border-radius: 4px;
-    display: inline-block;
-    color: #e74c3c;
-    cursor: pointer;
-    font-size: 20px;
-    font-weight: 600;
-    height: 80px;
-    line-height: 40px;
-    letter-spacing: 1px;
-    margin: 5px;
-    overflow: hidden;
-    padding: 0 20px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: all .2s ease-in-out;
-    width: 100%;
-  }
-  .roll-text {
-    display: block;
-    position: relative;
-    transition: all 420ms cubic-bezier(.175,.885,.32,1.275);
-    margin-top: 20px;
-  }
-  #content-container {
-    padding: 1%;
-    width: 100%;
-    margin: 0 auto;
-    height: 100%;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    color: black;
-  }
-  #text {
-    font-size: 1.1em;
-  }
-  #container {
-    width: 95%;
-    height: 100%;
-    margin: 0 auto;
-  }
-  #courseBg {
-    width: 100%;
-    height: 400px;
-    background-image: url('../images/comp.png');
-    background-position: 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: white;
-    font-family: 'Orbitron', sans-serif;
-  }
-  #course-stuff {
-    color: white;
-    padding-top: 300px;
-    padding-left: 2%;
-    width: 70%;
-    float: left;
-  }
-  #marg {
-    margin-top: 100px;
-  }
-
-  #body {
-    width: 100%;
-    height: 600px;
-    background-image: url(../images/mac.png);
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  #splash {
-    padding-top: 25%;
-  }
-
-  #splash h1 {
-    font-size: 5em;
-  }
-  #margy {
-    margin-top: 20%;
-  }
-
-  #littleMargy {
-    margin-top: 10%;
-    margin-bottom: 5%;
-  }
-
-  #mainImages {
-    width: 80%;
-    height: 200px;
-  }
-
-  #main2Images {
-    width: 100%;
-    height: 200px;
-  }
-
-  #space {
-    margin-top: 5%;
-  }
-
-  #main-profile {
-    width: 100%;
-    height: 400px
-  }
-}
-
-
-
-
-
-
-
-
-/* Tablet View */
-@media screen and (min-width: 760px) {
-  #adminmarg {
-    margin-top: 50px;
-  }
-  #bg-stuff {
-    padding-top: 550px;
-    font-size: 1.3em;
-  }
-  #internet {
-    width: 100%;
-    height: 400px;
-  }
-  #courseImage {
-    width: 100%;
-    height: 100px;
-  }
-  #splashLogo {
-    font-family: 'Ultra', serif;
-    padding-left: 15px;
-    font-size: 3em;
-  }
-  #splashHomeButton {
-    font-size: 4em;
-    left: 80%;
-    top: 2%;
-  }
-  #splashHead {
-    font-family: 'Ubuntu', sans-serif;
-    text-align: left;
-    padding-left: 30px;
-    font-size: 2em;
-  }
-  #splashImage {
-    width: 90%;
-    height: 400px;
-  }
-  #form-container {
-    width: 100%;
-    margin: 0 auto;
-  }
-  #adminVideoContainer {
-    visibility: visible;
-  }
-  #callOptions {
-    visibility: visible;
-  }
-  #learning-image {
-    height: 170.767px;
-  }
-  #projectImage {
-    width: 100%;
-    height: 90px;
-  }
-  #text {
-    font-size: 1.5em;
-  }
-  #courseTitleMargin {
-    margin-top: 100px;
-  }
-  #mems {
-    font-size: 1.3em;
-  }
-  #course-stuff {
-    padding-top: 350px;
-    font-size: 1.3em;
-  }
-  #container {
-    width: 90%;
-    height: 100%;
-    margin: 0 auto;
-  }
-  .navbar {
-    border: 0px solid black;
-  }
-  #marg {
-    margin-top: 100px;
-  }
-  #messageSent {
-    color: green;
-    font-size: 1.5em;
-    margin-bottom: 2%;
-    padding: 2%;
-    
-  }
-  #man {
-    margin-right: 10px;
-  }
-  #textEditor {
-    margin-top: 0px;
-  }
-}
-
-/* Tablet View */
-@media screen and (min-width: 996px) {
-  #body {
-    width: 100%;
-    height: 735px;
-    background-image: url(../images/mac.png);
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
-  #projectbody {
-    width: 100%;
-    height: 300px;
-    background-image: url(../images/chat.png);
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
-  #servicebody {
-    width: 100%;
-    height: 300px;
-    background-image: url(../images/mac.png);
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
-  #splash {
-    padding-top: 25%;
-  }
-
-  #splash h1 {
-    font-size: 5em;
-  }
-
-  #splash2 {
-    padding-top: 10%;
-    color: white
-  }
-
-  #splash2 h1 {
-    font-size: 5em;
-  }
-
-  #margy {
-    margin-top: 20%;
-  }
-
-  #littleMargy {
-    margin-top: 10%;
-    margin-bottom: 5%;
-  }
-
-  #mainImages {
-    width: 80%;
-    height: 200px;
-  }
-
-  #main2Images {
-    width: 100%;
-    height: 200px;
-  }
-
-  #space {
-    margin-top: 5%;
-  }
-
-  #main-profile {
-    width: 100%;
-    height: 400px
-  }
 }
