--- a/views/admin/art/allart.pug
+++ b/views/admin/art/allart.pug
@@ -26,3 +26,4 @@ block content
               td= blog.title
               td= blog.category
               td= blog.date_created
+  div(id="marg")
