--- a/views/admin/art/createartwork.pug
+++ b/views/admin/art/createartwork.pug
@@ -20,3 +20,4 @@ block content
         input(class="form-control" type="text" name="category")
         br
         input(class="form-control" type="submit" value="Submit")
+  div(id="marg")
