--- a/views/admin/courses/courses.pug
+++ b/views/admin/courses/courses.pug
@@ -22,3 +22,4 @@ block content
                 a(href="/admin/showcourse/" + course.id)= course.title
               td $
                 span= course.price
+  div(id="marg")
