--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -7,34 +7,4 @@ block content
     div(class="row")
       div(class="col-sm-12")
         div(class="container")
-          div(class="row")
-            div(class="col")
-              div(id="odd")
-                h3
-                  u Latest Services
-                each s in services
-                  p=s.title
-            div(class="col")
-              h3
-                u Latest Blogs
-              each s in blogs
-                p=s.title
-            div(class="col")
-              div(id="odd")
-                h3
-                  u Latest Courses
-                each s in courses
-                  p=s.title
-            div(class="col")
-              h3
-                u Latest Projects
-              each s in projects
-                p=s.title
-            div(class="col")
-              div(id="odd")
-                h3
-                  u Latest Messages
-                each s in messages
-                  p
-                    span=s.firstName
-                    span=s.lastName        
+  div(id="marg")
