--- a/views/admin/messages/incomingmessages.pug
+++ b/views/admin/messages/incomingmessages.pug
@@ -19,3 +19,4 @@ block content
                   span= message.lastName
               td= message.inquiry
               td= message.date_created
+  div(id="marg")
