--- a/views/admin/projects/createproject.pug
+++ b/views/admin/projects/createproject.pug
@@ -19,3 +19,4 @@ block content
         input(class="form-control" type="text" name="linkUrl")
         br
         input(class="form-control" type="submit" value="Submit Project")
+  div(id="marg")
