--- a/views/admin/projects/projects.pug
+++ b/views/admin/projects/projects.pug
@@ -22,3 +22,4 @@ block content
                 a(href="/admin/updateBlog")= project.title
               td
                 a(href=project.linkUrl target="_blank") Go To Website
+  div(id="marg")
