--- a/views/admin/users/createuser.pug
+++ b/views/admin/users/createuser.pug
@@ -31,3 +31,4 @@ block content
         input(class="form-control" type="text" name="password")
         br
         input(class="form-control" type="submit" value="Submit")
+  div(id="marg")
