--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,9 @@ html(lang="en")
     link(href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet") 
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/mobile.css')
+    link(rel='stylesheet', href='/stylesheets/tablet.css')
+    link(rel='stylesheet', href='/stylesheets/desktop.css')
   body
     nav(class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id="nav")
       div(class="container")
@@ -55,7 +58,8 @@ html(lang="en")
           div(class="col-md-3")
             h5(class="text-center") Proud Member
             hr
-            img(class="img-fluid" src="/images/shield_badge.png")
+            center
+              img(class="img-fluid" src="/images/shield_badge.png")
           div(class="col-md-3")
             h5(class="text-center") Categories
             hr
