--- a/views/admin/blogs/blogs.pug
+++ b/views/admin/blogs/blogs.pug
@@ -23,3 +23,4 @@ block content
                 a(href="/admin/showblog/" + blog.id)= blog.title
               td= blog.category
               td= blog.date_created
+  div(id="marg")
