--- a/views/admin/blogs/createblog.pug
+++ b/views/admin/blogs/createblog.pug
@@ -25,3 +25,4 @@ block content
         textarea(class="form-control" type="text" name="description")
         br
         input(class="form-control" type="submit" value="Submit")
+  div(id="marg")
