--- a/views/admin/courses/showcourse.pug
+++ b/views/admin/courses/showcourse.pug
@@ -27,3 +27,4 @@ block content
                 input(class="form-control" type="submit" value="Submit")
         else
           h1(class="text-center") No Courses Added Yet
+  div(id="marg")
