--- a/views/admin/office.pug
+++ b/views/admin/office.pug
@@ -23,6 +23,7 @@ block content
             textarea(class="form-control" placeholder="Enter Javascript Code" width="100%" height="100%")
           br
           div(id="console")
+  div(id="marg")
 
   script(src="../js/facetime.js")
   
