--- a/views/admin/users/allusers.pug
+++ b/views/admin/users/allusers.pug
@@ -23,3 +23,4 @@ block content
               td
                 a(href="/admin/showuser/" + user.id)= user.name
               td= user.username
+  div(id="marg")
