--- a/views/index.pug
+++ b/views/index.pug
@@ -6,80 +6,98 @@ block content
       h1(class="text-center") Turn Your Vision Into A Reality
       br
       h1(class="text-center" id="randomWord")
-  br
-  div(class="container")
-    div(id="margy")
+  div(id="coursesMain")
+    div(class="container")
+      div(id="margy")
+        div(class="row")
+          div(class="col-sm-12")
+            h1(class="text-center") Courses
+        div(id="littleMargy")
+          div(class="row")
+            div(class="col")
+              center
+                img(src="images/html5.png" id="mainImages")
+                div(id="space")
+                h3 Html5
+            div(class="col")
+              center
+                img(src="images/js.png" id="mainImages")
+                div(id="space")
+                h3 Javascript
+            div(class="col")
+              center
+                img(src="images/php.png" id="mainImages")
+                div(id="space")
+                h3 PHP
+          hr
+          br
+          div(class="row")
+            div(class="col-sm-12")
+              center
+                button(class="btn btn-primary" id="mainButton")
+                  a(href="/static/allcourses") More Courses I Offer
+  div(id="servicesMain")
+    div(class="container")
+      div(id="margy")
+        div(class="row")
+          div(class="col-sm-12")
+            h1(class="text-center") Services
+        div(id="littleMargy")
+          div(class="row")
+            div(class="col")
+              center
+                img(src="/images/graphics.png" id="mainImages")
+                div(id="space")
+                h3 Graphics
+            div(class="col")
+              center
+                img(src="images/html5.png" id="mainImages")
+                div(id="space")
+                h3 Web
+            div(class="col")
+              center
+                img(src="images/js.png" id="mainImages")
+                div(id="space")
+                h3 Apps
+          hr
+          br
+          div(class="row")
+            div(class="col-sm-12")
+              center
+                button(class="btn btn-primary" id="mainButton")
+                  a(href="/static/allservices") More Services I Offer
+  div(id="meMain")
+    div(id="margy" class="container")
       div(class="row")
         div(class="col-sm-12")
-          h1(class="text-center") Services
+          h1(class="text-center") Hi, I'm Tyquan
       div(id="littleMargy")
         div(class="row")
-          div(class="col-sm-4")
-            center
-              img(src="/images/logo.jpg" id="mainImages")
-              div(id="space")
-              h3 Logo Design
-          div(class="col-sm-4")
-            center
-              img(src="images/html5.png" id="mainImages")
-              div(id="space")
-              h3 Web Design
-          div(class="col-sm-4")
-            center
-              img(src="images/js.png" id="mainImages")
-              div(id="space")
-              h3 App Development
-    hr
-    div(id="margy")
-      div(class="row")
-        div(class="col-sm-12")
-          h1(class="text-center") Courses
-      div(id="littleMargy")
-        div(class="row")
-          div(class="col-sm-4")
-            center
-              img(src="images/html5.png" id="main2Images")
-              div(id="space")
-              h3 Html5
-          div(class="col-sm-4")
-            center
-              img(src="images/js.png" id="main2Images")
-              div(id="space")
-              h3 Javascript
-          div(class="col-sm-4")
-            center
-              img(src="images/php.png" id="main2Images")
-              div(id="space")
-              h3 PHP - Mysql
-    hr
-    div(id="margy")
-      div(class="row")
-        div(class="col-sm-12")
-          h1(class="text-center") Meet Tyquan Reddick
-      div(id="littleMargy")
-        div(class="row")
-         div(class="col-sm-4")
+         div(class="col")
            center
               img(src="images/profile.jpg" id="main-profile" class="img-thumbnail")
-         div(class="col-sm-8")
-           h3 Certified Javascript, Python and MongDB Developer
-           h3 Adobe Designer
-           h4 Currently Focused on C# Programming, VR/AR and Artificial Intelligence
-           div(id="littleMargy")
-             h2 Connect With Me
-             h1
-                a(href="mailto:tjreddick@gmail.com")
-                  i(class="fa fa-envelope-o" aria-hidden="true") 
-                a(href="http://www.meetup.com/members/154846722/" target="_blank")
-                  i(class="fa fa-users") 
-                a(href="http://www.github.com/Tyquan" target="_blank")
-                  i(class="fa fa-github") 
-                a(href="https://www.linkedin.com/in/tyquanreddick" target="_blank")
-                  i(class="fa fa-linkedin fa-fw") 
-                a(href="http://codepen.io/Tyquan/" target="_blank")
-                  i(class="fa fa-pencil-square-o") 
-                a(href="http://www.freecodecamp.com/tyquan" target="_blank")
-                  i(class="fa fa-trophy")
-                a(href="https://www.youtube.com/channel/UCJlAkRDaMAMS5Mlr3125ZWA")
-                  i(class="fa fa-youtube" aria-hidden="true")
+         div(class="col")
+           p Certified Javascript, Python and MongDB Developer
+           p Adobe Designer
+           p Currently Focused on C# Programming, VR/AR and Artificial Intelligence
+        br
+        br
+        div(class="row")
+          div(class="col")
+            h4(class="text-center") Connect With Me
+            h5(class="text-center")
+              a(href="mailto:tjreddick@gmail.com")
+                i(class="fa fa-envelope-o" aria-hidden="true") 
+              a(href="http://www.meetup.com/members/154846722/" target="_blank")
+                i(class="fa fa-users") 
+              a(href="http://www.github.com/Tyquan" target="_blank")
+                i(class="fa fa-github") 
+              a(href="https://www.linkedin.com/in/tyquanreddick" target="_blank")
+                i(class="fa fa-linkedin fa-fw") 
+              a(href="http://codepen.io/Tyquan/" target="_blank")
+                i(class="fa fa-pencil-square-o") 
+              a(href="http://www.freecodecamp.com/tyquan" target="_blank")
+                i(class="fa fa-trophy")
+              a(href="https://www.youtube.com/channel/UCJlAkRDaMAMS5Mlr3125ZWA")
+                i(class="fa fa-youtube" aria-hidden="true")
   script(src="/js/randomword.js")
