--- a/views/login.pug
+++ b/views/login.pug
@@ -21,3 +21,4 @@ block content
                 div(class="form-group")
                     input(type="submit", value="Submit" class="btn btn-primary")
         div(class="col-md-3")
+  div(id="marg")
