--- a/views/index.pug
+++ b/views/index.pug
@@ -75,7 +75,7 @@ block content
         div(class="row")
          div(class="col")
            center
-              img(src="images/profile.jpg" id="main-profile" class="img-thumbnail")
+              img(src="/images/profile.jpg" id="main-profile" class="img-thumbnail")
          div(class="col")
            p Certified Javascript, Python and MongDB Developer
            p Adobe Designer
