--- a/views/static/gallery.pug
+++ b/views/static/gallery.pug
@@ -10,7 +10,7 @@ block content
       div(class="row")
         if (pieces.length > 0)
           each project in pieces
-            div(class="col-xs-6 col-md-2")
+            div(class="col col-md-2")
               a(href=project.img target="_blank")
                 center
                   img(src=project.img id="projectImage")
