--- a/views/static/projects.pug
+++ b/views/static/projects.pug
@@ -10,7 +10,7 @@ block content
     div(class="row")
       if (projects.length > 0)
         each project in projects
-          div(class="col-md-2")
+          div(class="col col-md-2")
             a(href=project.linkUrl target="_blank")
               center
                 img(src=project.imageUrl id="projectImage")
