--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -2,7 +2,8 @@
 @media screen and (min-width: 996px) {
   #body {
     width: 100%;
-    height: 735px;
+    margin-top: 4%;
+    height: 645px;
     background-image: url(../images/mac.png);
     background-repeat: no-repeat;
     background-position: center;
@@ -17,24 +18,34 @@
     margin-top: -222px;
   }
 
-  #projectbody {
+
+  #projectImage {
+      width: 100%;
+      height: 120px;
+  }
+
+  #jig {
     width: 100%;
+  }
+
+  #jiggy {
+    font-size: 1.5em;
+  }
+
+  #hideMobile {
+    visibility: visible;
+  }
+
+  #projectbody {
     height: 300px;
-    background-image: url(../images/chat.png);
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #servicebody {
-    width: 100%;
     height: 300px;
-    background-image: url(../images/mac.png);
-    background-repeat: no-repeat;
-    background-position: center;
   }
 
   #splash {
-    padding-top: 20%;
+    padding-top: 15%;
   }
 
   #splash h1 {
@@ -47,12 +58,17 @@
   }
 
   #splash2 h1 {
+    padding-top: 0%;
     font-size: 5em;
   }
 
   #margy {
-    margin-top: 20%;
+    margin-top: -10%;
     padding-top: 10%;
+  }
+
+  #coursesMain {
+    height: 900px;
   }
 
   #littleMargy {
@@ -61,8 +77,7 @@
   }
 
   #mainImages {
-    width: 80%;
-    height: 200px;
+    height: 150px;
   }
 
   #main2Images {
@@ -75,7 +90,7 @@
   }
 
   #main-profile {
-    width: 100%;
-    height: 400px
+    width: 50%;
+    height: 300px;
   }
 }
