--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -11,6 +11,23 @@
     background-position: center;
   }
 
+  #bt {
+    color: white;
+    margin-bottom: 10%
+  }
+
+  #bt a {
+    color: white;
+  }
+
+  #bt a:link {
+    color: white;
+  }
+
+  #hideMobile {
+    visibility: hidden;
+  }
+
   #coursesMain {
     width: 100%;
     padding-top: 10%;
@@ -86,8 +103,14 @@
   }
   #courseImage {
     width: 100%;
+    height: 50px;
+  }
+
+  #courseImage2 {
+    width: 100%;
     height: 150px;
   }
+
   #nav {
     color: black;
     width: 100%;
@@ -276,5 +299,30 @@
   #main-profile {
     width: 100%;
     height: 200px;
+  }
+
+  #servicebody {
+    width: 100%;
+    height: 200px;
+    background-image: url(../images/mac.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  #projectbody {
+    width: 100%;
+    height: 200px;
+    background-image: url(../images/chat.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  #splash2 h1 {
+    padding-top: 25%;
+    color: white;
+  }
+
+  #mobileHide {
+    visibility: hidden;
   }
 }
