--- a/views/static/blogs.pug
+++ b/views/static/blogs.pug
@@ -10,8 +10,8 @@ block content
     div(class="row")
       if (blogs.length > 0)
         each blog in blogs
-          div(class="col-md-2")
-            a(href="/static/showblog/" + blog.id target="_blank")
+          div(class="col col-md-2")
+            a(href="/static/showblog/" + blog.id)
               center
                 img(src=blog.imageUrl class="img-fluid")
               h3(class="text-center" id="text")=blog.title
