--- a/views/static/showblog.pug
+++ b/views/static/showblog.pug
@@ -1,8 +1,11 @@
 extends ../layout
 
 block content
-  div(id="adminmarg")
-  div(id="content-container")
+  div(id="servicebody")
+    div(id="splash2")
+      h1(class="text-center") Video Blog
+  br
+  div(id="marg")
     div(id="container")
       if (blog)
         div(class="row")
@@ -12,7 +15,7 @@ block content
               small= blog.date_created
             hr
         div(class="row")
-          div(class="col-md-4")
+          div(class="col-md-6")
             center
               img(src=blog.imageUrl class="img-fluid")
             br
@@ -22,7 +25,7 @@ block content
             h4 Category:
             p= blog.category
             br
-          div(class="col-md-8")
+          div(class="col-md-6")
             iframe(src=blog.videoUrl width="100%" height="400px")
       else
         h1(class="text-center") No Blogs Added Yet
