--- a/views/index.pug
+++ b/views/index.pug
@@ -16,19 +16,22 @@ block content
           div(class="row")
             div(class="col")
               center
-                img(src="images/html5.png" id="mainImages")
-                div(id="space")
-                h3 Html5
+                a(href="/static/showcourse/590cc9e58baf9510fcfb3a51" id="bt2")
+                  img(src="images/html5.png" id="mainImages")
+                  div(id="space")
+                  h3 Html5
             div(class="col")
               center
-                img(src="images/js.png" id="mainImages")
-                div(id="space")
-                h3 Javascript
+                a(href="/static/showcourse/590ba9f919d6711431d5ca53" id="bt2")
+                  img(src="images/js.png" id="mainImages")
+                  div(id="space")
+                  h3 Javascript
             div(class="col")
               center
-                img(src="images/php.png" id="mainImages")
-                div(id="space")
-                h3 PHP
+                a(href="/static/showcourse/590baac019d6711431d5ca55" id="bt2")
+                  img(src="images/php.png" id="mainImages")
+                  div(id="space")
+                  h3 PHP
           hr
           br
           div(class="row")
@@ -46,19 +49,22 @@ block content
           div(class="row")
             div(class="col")
               center
-                img(src="/images/graphics.png" id="mainImages")
-                div(id="space")
-                h3 Graphics
+                a(href="/static/showservice/59f37a95e769b213b80610fd" id="bt2")
+                  img(src="/images/graphics.png" id="mainImages")
+                  div(id="space")
+                  h3 Graphics
             div(class="col")
               center
-                img(src="images/html5.png" id="mainImages")
-                div(id="space")
-                h3 Web
+                a(href="/static/showservice/59f37d3ae769b213b8061104" id="bt2")
+                  img(src="images/html5.png" id="mainImages")
+                  div(id="space")
+                  h3 Web
             div(class="col")
               center
-                img(src="images/js.png" id="mainImages")
-                div(id="space")
-                h3 Apps
+                a(href="/static/showservice/59f37dd0e769b213b8061107" id="bt2")
+                  img(src="images/js.png" id="mainImages")
+                  div(id="space")
+                  h3 Apps
           hr
           br
           div(class="row")
