--- a/views/layout.pug
+++ b/views/layout.pug
@@ -88,7 +88,7 @@ html(lang="en")
               a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Meanstack 1.5
         hr
         div(class="row")
-          div(class="col-md-12")
+          div(class="col")
             p(class="text-center") Tyquan Reddick 2017
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous")
