--- a/views/static/showblog.pug
+++ b/views/static/showblog.pug
@@ -12,7 +12,7 @@ block content
           div(class="col-md-12")
             h1(class="text-center")= blog.title
             p(class="text-center")
-              small= blog.date_created
+              span= blog.date_created
             hr
         div(class="row")
           div(class="col-md-6")
@@ -20,10 +20,12 @@ block content
               img(src=blog.imageUrl class="img-fluid")
             br
             div
-              p= blog.description
+              p(id="blogDescription")
+                span= blog.description
             br
             h4 Category:
-            p= blog.category
+            p(id="blogDescription")
+              span= blog.category
             br
           div(class="col-md-6")
             iframe(src=blog.videoUrl width="100%" height="400px")
