--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -109,6 +109,7 @@
     background-size: cover;
     margin-top: -222px;
     color: whitesmoke;
+    padding-top: 0px;
   }
 
   #workTogether {
@@ -123,7 +124,7 @@
   }
   #collabImage {
     height: 350px;
-    width: 100%''
+    width: 100%;
   }
   #workMarg {
     padding-top: 10%;
