--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -4,11 +4,18 @@
   #body {
     width: 100%;
     padding-top: 10%;
-    margin-top: 15%;
     height: 620px;
     background-image: url(../images/mac.png);
     background-repeat: no-repeat;
     background-position: center;
+  }
+
+  #mainContact {
+    width: 150px;
+    height: 75px;
+    background-color: #d63031;
+    padding-top: 5%;
+    border-radius: 5%;
   }
 
   .randomWord {
@@ -320,8 +327,8 @@
   }
 
   #mainImages {
-    width: 80%;
-    height: 50px;
+    width: 100%;
+    height: 100px;
   }
 
   #main2Images {
@@ -362,5 +369,35 @@
 
   #mobileHide {
     visibility: hidden;
+  }
+
+  #roi {
+    height: 400px;
+    width: 100%;
+    background-image: url(../images/goals.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: whitesmoke;
+    padding-top: 12px;
+  }
+
+  #workTogether {
+    height: 100%;
+    width: 100%;
+    background-image: url(../images/collab.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: whitesmoke;
+  }
+  #collabImage {
+    height: 250px;
+    width: 100%;
+    padding-bottom: 10%;
+  }
+  #serviceImage {
+    width: 100%;
+    height: 150px;
   }
 }
