--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ block content
       br
       center
         div(id="mainContact")
-          a(href="/messages/contact")
+          a(id="mainContactt" href="/messages/contact")
             h5 Contact Me
   div(id="coursesMain")
     div(class="container")
@@ -144,3 +144,4 @@ block content
               a(href="https://www.youtube.com/channel/UCJlAkRDaMAMS5Mlr3125ZWA")
                 i(class="fa fa-youtube" aria-hidden="true")
   script(src="/js/randomword.js")
+  script(src="/js/clicks.js")
