--- a/views/admin/nav.pug
+++ b/views/admin/nav.pug
@@ -1,10 +1,8 @@
-ul(class="nav nav-tabs")
+ul(class="nav flex-column")
   li(class="nav-item") 
     a(class="nav-link" href="/admin/dashboard") Dashboard
   li(class="nav-item")
     a(class="nav-link" href="/admin/allusers") Users
-  li(class="nav-item")
-    a(class="nav-link" href="/admin/office") Office
   li(class="nav-item")
     a(class="nav-link" href="/admin/allcourses") Courses
   li(class="nav-item")
