--- a/views/index.pug
+++ b/views/index.pug
@@ -36,7 +36,7 @@ block content
             div(class="col")
               center
                 a(href="/static/showservice/5acb95e1f3329a0020b020f8" id="bt2")
-                  img(src="https://dynastydigitalnetwork.com.au/blog/wp-content/uploads/2017/09/01.png" id="mainImages")
+                  img(src="https://content.linkedin.com/content/dam/business/marketing-solutions/global/en_US/blog/ContentMarketing810.jpg" id="mainImages")
                   div(id="space")
                   h3 Content Marketing
           hr
@@ -117,10 +117,10 @@ block content
                iframe(src=blo.videoUrl id="iframes")
          div(class="col-md-4")
            div(class="row")
-             div(class="col-sm-8")
+             div(class="col")
               center
                 img(src="/images/profile.jpg" id="main-profile" class="img-thumbnail")
-             div(class="col-sm-4")
+             div(class="col")
                p Digital Consultant
                p Javascript - Python Developer
         br
