--- a/views/static/footer.pug
+++ b/views/static/footer.pug
@@ -1,4 +1,30 @@
-div(id="marg")
-footer(id="footer")
-  a(class="nav-link" href="/" id="logo")
-    h5 Home
+footer
+  div(class="container")
+    div(class="row")
+      div(class="col-md-4")
+        h5(class="text-center") Hours and Location
+        hr
+        p Brooklyn, NY
+        p TyquanJReddick@gmail.com
+        p
+          b Open: 8am - 9pm
+        p
+          b Lunch: 1pm - 2pm
+      div(class="col-md-4")
+        h5(class="text-center") Proud Member
+        hr
+        center
+          img(class="img-fluid" src="/images/shield_badge.png")
+      div(class="col-md-4")
+        h5(class="text-center") Latest Post
+        hr
+        p
+          a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Undestanding Agents
+        p
+          a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Vuejs Full Stack Live Stream
+        p
+          a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Meanstack 1.5
+    hr
+    div(class="row")
+      div(class="col")
+        p(class="text-center") Tyquan Reddick 2019
