--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -1,15 +1,61 @@
 /* Mobile View */
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 480px) {
 
   #body {
     width: 100%;
-    padding-top: 10%;
-    height: 720px;
-    background-image: url(../images/mac.png);
+    padding-top: 0%;
+    height: 100vh;
+    background-image: url(../images/polygon.jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
   }
 
+  #fixed {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    left: 0;
+    z-index: 2;
+  }
+
+  #splashMenu {
+    margin-top: 8%;
+    width: 40px;
+    margin-right: 10%;
+    height: 40px;
+    float: right;
+
+  }
+
+  #showMenu {
+    margin-top: 30%;
+    background-color: #e55039;
+    width: 100%;
+    border-radius: 5px;
+    display: none;
+  }
+
+  #showMenu a {
+    color: white;
+    text-decoration: none;
+    list-style: none;
+  }
+
+  #showMenu a:hover {
+    color: white;
+    background-color: #4a69bd;
+  }
+
+  #main {
+    padding-top: 20%;
+  }
+
+  #main h1, #main h3 {
+    font-size: 4em;
+  }
+  /*
   #mainContact {
     width: 150px;
     height: 75px;
@@ -404,4 +450,5 @@
     width: 100%;
     height: 150px;
   }
+  */
 }
