--- a/views/admin/blogs/createblog.pug
+++ b/views/admin/blogs/createblog.pug
@@ -2,27 +2,27 @@ extends ../../layout
 
 block content
   div(id="adminBg")
-    include ../nav.pug
-    div(class="container")
-      div(class="row")
-        div(class="col-xs-12")
-          h5 Ty's Blog Create Page
-      br
-      form(action="/admin/createblog" method="POST")
-        label Title
-        input(class="form-control" type="text" name="title")
+    div(class="row")
+      div(class="col-md-2")
+        include ../nav.pug
+      div(class="col-md-10")
+        h5 Ty's Blog Create Page
         br
-        label Image Url
-        input(class="form-control" type="text" name="imageUrl")
-        br
-        label Video Url
-        input(class="form-control" type="text" name="videoUrl")
-        br
-        label Category
-        input(class="form-control" type="text" name="category")
-        br
-        label Description
-        textarea(class="form-control" type="text" name="description")
-        br
-        input(class="form-control" type="submit" value="Submit")
+        form(action="/admin/createblog" method="POST")
+          label Title
+          input(class="form-control" type="text" name="title")
+          br
+          label Image Url
+          input(class="form-control" type="text" name="imageUrl")
+          br
+          label Video Url
+          input(class="form-control" type="text" name="videoUrl")
+          br
+          label Category
+          input(class="form-control" type="text" name="category")
+          br
+          label Description
+          textarea(class="form-control" type="text" name="description")
+          br
+          input(class="form-control" type="submit" value="Submit")
   div(id="marg")
