--- a/views/admin/courses/createcourse.pug
+++ b/views/admin/courses/createcourse.pug
@@ -2,30 +2,30 @@ extends ../../layout
 
 block content
   div(id="adminBg")
-    include ../nav.pug
-    div(class="container")
-      div(class="row")
-        div(class="col-xs-12")
-          h5 Ty's Course Create Page
-      br
-      form(action="/admin/createcourse" method="POST")
-        label Title
-        input(class="form-control" type="text" name="title")
+    div(class="row")
+      div(class="col-md-2")
+        include ../nav.pug
+      div(class="col-md-10")
+        h5 Ty's Course Create Page
         br
-        label Image Url
-        input(class="form-control" type="text" name="imageUrl")
-        br
-        label Prerequisites
-        input(class="form-control" type="text" name="prerequisites")
-        br
-        label Price
-        input(class="form-control" type="text" name="price")
-        br
-        label Lessons Length (How many lessons?)
-        input(class="form-control" type="text" name="lessons")
-        br
-        label Description
-        textarea(class="form-control" type="text" name="description")
-        br
-        input(class="form-control" type="submit" value="Submit")
+        form(action="/admin/createcourse" method="POST")
+          label Title
+          input(class="form-control" type="text" name="title")
+          br
+          label Image Url
+          input(class="form-control" type="text" name="imageUrl")
+          br
+          label Prerequisites
+          input(class="form-control" type="text" name="prerequisites")
+          br
+          label Price
+          input(class="form-control" type="text" name="price")
+          br
+          label Lessons Length (How many lessons?)
+          input(class="form-control" type="text" name="lessons")
+          br
+          label Description
+          textarea(class="form-control" type="text" name="description")
+          br
+          input(class="form-control" type="submit" value="Submit")
   div(id="marg")
