--- a/views/admin/dashboard.pug
+++ b/views/admin/dashboard.pug
@@ -2,9 +2,8 @@ extends ../layout
 
 block content
   div(id="adminBg")
-    include nav.pug
-    br
     div(class="row")
-      div(class="col-sm-12")
-        div(class="container")
+      div(class="col-md-2")
+        include nav.pug
+      div(class="col-md-10")
   div(id="marg")
