--- a/views/admin/projects/createproject.pug
+++ b/views/admin/projects/createproject.pug
@@ -2,21 +2,21 @@ extends ../../layout
 
 block content
   div(id="adminBg")
-    include ../nav.pug
-    div(class="container")
-      div(class="row")
-        div(class="col-xs-12")
-          h5 Ty's Project Create Page
-      br
-      form(action="/admin/createproject" method="POST")
-        label Title
-        input(class="form-control" type="text" name="title")
+    div(class="row")
+      div(class="col-md-2")
+        include ../nav.pug
+      div(class="col-md-10")
+        h5 Ty's Project Create Page
         br
-        label Image Url
-        input(class="form-control" type="text" name="imageUrl")
-        br
-        label Link Url
-        input(class="form-control" type="text" name="linkUrl")
-        br
-        input(class="form-control" type="submit" value="Submit Project")
+        form(action="/admin/createproject" method="POST")
+          label Title
+          input(class="form-control" type="text" name="title")
+          br
+          label Image Url
+          input(class="form-control" type="text" name="imageUrl")
+          br
+          label Link Url
+          input(class="form-control" type="text" name="linkUrl")
+          br
+          input(class="form-control" type="submit" value="Submit Project")
   div(id="marg")
