--- a/views/admin/services/createservice.pug
+++ b/views/admin/services/createservice.pug
@@ -2,30 +2,30 @@ extends ../../layout
 
 block content
   div(id="adminBg")
-    include ../nav.pug
-    div(class="container")
-      div(class="row")
-        div(class="col-xs-12")
-          h5 Ty's Service Create Page
-      br
-      form(action="/admin/createservice" method="POST")
-        label Title
-        input(class="form-control" type="text" name="title")
+    div(class="row")
+      div(class="col-md-2")
+        include ../nav.pug
+      div(class="col-md-10")
+        h5 Ty's Service Create Page
         br
-        label Image Url
-        input(class="form-control" type="text" name="imageUrl")
-        br
-        label Price
-        input(class="form-control" type="text" name="price")
-        br
-        label Category
-        select(class="form-control" name="category")
-          option(value="") Select...
-          option(value="web") Website Service
-          option(value="graphic") Graphic Service
-        br
-        label Description
-        textarea(class="form-control" type="text" name="description")
-        br
-        input(class="form-control" type="submit" value="Submit")
+        form(action="/admin/createservice" method="POST")
+          label Title
+          input(class="form-control" type="text" name="title")
+          br
+          label Image Url
+          input(class="form-control" type="text" name="imageUrl")
+          br
+          label Price
+          input(class="form-control" type="text" name="price")
+          br
+          label Category
+          select(class="form-control" name="category")
+            option(value="") Select...
+            option(value="web") Website Service
+            option(value="graphic") Graphic Service
+          br
+          label Description
+          textarea(class="form-control" type="text" name="description")
+          br
+          input(class="form-control" type="submit" value="Submit")
   div(id="marg")
