--- a/views/index.pug
+++ b/views/index.pug
@@ -122,7 +122,7 @@ block content
                 img(src="/images/profile.jpg" id="main-profile" class="img-thumbnail")
              div(class="col")
                p Digital Consultant
-               p Javascript - Python Developer
+               p Web / Mobile Developer
         br
         br
         div(class="row")
