--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -5,7 +5,7 @@
     width: 100%;
     padding-top: 0%;
     height: 100vh;
-    background-image: url(../images/polygon.jpg);
+    background-image: url(../images/comp.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -55,7 +55,7 @@
   #main h1, #main h3 {
     font-size: 4em;
   }
-  /*
+
   #mainContact {
     width: 150px;
     height: 75px;
@@ -450,5 +450,4 @@
     width: 100%;
     height: 150px;
   }
-  */
 }
