--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,65 @@ html(lang="en")
     link(rel='stylesheet', href='/stylesheets/tablet.css')
     link(rel='stylesheet', href='/stylesheets/desktop.css')
   body
+    nav(class="navbar fixed-top navbar-expand-lg navbar-light bg-light" id="nav")
+      div(class="container")
+        a(class="navbar-brand" id="logo" href="/") Tyquan Reddick
+        button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+          span(class="navbar-toggler-icon")
+        div(class="collapse navbar-collapse" id="navbarSupportedContent")
+          ul(class="nav nav-fill mr-auto")
+              li(class="nav-item")
+                a(class="nav-link" href="/" id="logo")
+                  h5 Home
+              li(class="nav-item")
+                a(class="nav-link" href="/static/allservices" id="logo")
+                  h5 Services
+              li(class="nav-item")
+                a(class="nav-link" href="/static/allcourses" id="logo")
+                  h5 Courses
+              li(class="nav-item")
+                a(class="nav-link" href="/static/allprojects" id="logo")
+                  h5 Projects
+              li(class="nav-item")
+                a(class="nav-link" href="/static/allblogs" id="logo")
+                  h5 Vlog
+              li(class="nav-item")
+                a(class="nav-link" href="/static/gallery" id="logo")
+                  h5 Gallery
+              li(class="nav-item")
+                a(class="nav-link" href="/messages/contact" id="logo")
+                  h5 Contact Me
     block content
+    footer
+      div(class="container")
+        div(class="row")
+          div(class="col-md-4")
+            h5(class="text-center") Hours and Location
+            hr
+            p Brooklyn, NY
+            p TyquanJReddick@gmail.com
+            p
+              b Open: 8am - 9pm
+            p
+              b Lunch: 1pm - 2pm
+          div(class="col-md-4")
+            h5(class="text-center") Proud Member
+            hr
+            center
+              img(class="img-fluid" src="/images/shield_badge.png")
+          div(class="col-md-4")
+            h5(class="text-center") Latest Post
+            hr
+            p
+              a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Undestanding Agents
+            p
+              a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Vuejs Full Stack Live Stream
+            p
+              a(href="https://www.youtube.com/watch?v=XO6SV0Mup1E" id="logo2") Meanstack 1.5
+        hr
+        div(class="row")
+          div(class="col")
+            p(class="text-center") Tyquan Reddick 2019
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous")
