--- a/views/index.pug
+++ b/views/index.pug
@@ -3,11 +3,11 @@ extends layout
 block content
   div(id="body")
     div(id="splash")
-      h1(class="mainText") Data Driven Results
+      h1(class="mainText") Web Design and Development Results
       br
-      h3(id="randomWord" class="randomWord")
+      h4(id="randomWord" class="randomWord")
       br
-      p(id="mainVidh1") Your Business is unique, your strategy should be too...
+      p(id="mainVidh1") Your business is unique, your web strategy should be too
       br
       center
         div(id="mainContact")
@@ -18,7 +18,7 @@ block content
       div(id="margy")
         div(class="row")
           div(class="col-sm-12")
-            p(id="mainVidh1") Digital Marketing
+            h1(id="mainVidh1") Digital Marketing
         div(id="littleMargy")
           div(class="row")
             div(class="col")
@@ -51,7 +51,7 @@ block content
       div(id="margy")
         div(class="row")
           div(class="col-sm-12")
-            p(id="mainVidh1") Your Goals Are My Goals
+            h1(id="mainVidh1") Your Goals Are My Goals
         div(id="littleMargy")
           div(class="row")
             div(class="col")
@@ -61,7 +61,7 @@ block content
       div(id="margy")
         div(class="row")
           div(class="col-sm-12")
-            p(id="mainVidh1") Brand Strategy Services
+            h1(id="mainVidh1") Brand Strategy Services
         div(id="littleMargy")
           div(class="row")
             div(class="col")
@@ -97,7 +97,7 @@ block content
             div(id="margy")
               div(class="row")
                 div(class="col-sm-12")
-                  p(id="mainVidh1") We Work Together
+                  h1(id="mainVidh1") We Work Together
               div(id="littleMargy")
                 div(class="row")
                   div(class="col")
@@ -123,6 +123,7 @@ block content
              div(class="col")
                p Digital Consultant
                p Web / Mobile Developer
+               p Adobe Illustrator and Photoshop Graphic Designer
         br
         br
         div(class="row")
